--- a/app/css/style.css
+++ b/app/css/style.css
@@ -477,10 +477,10 @@ img {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  margin-right: 8%;
   -webkit-flex-basis: 41%;
   -ms-flex-preferred-size: 41%;
-  flex-basis: 41%; }
+  flex-basis: 41%;
+  margin-right: 8%; }
   .main-nav ul {
     width: 100%;
     height: 3.75rem;
@@ -544,9 +544,9 @@ img {
   -ms-flex-pack: justify;
   justify-content: space-between;
   width: 11.25;
+  height: 100%;
   margin: 0 0 0 1.5rem;
   padding: 0;
-  height: 100%;
   border-right: 1px solid #dde2e4;
   border-left: 1px solid #dde2e4; }
 
@@ -696,8 +696,7 @@ img {
       left: 20%; }
     100% {
       opacity: 1;
-      left: 0; } }
-  /**/ }
+      left: 0; } } }
 
 @media only screen and (max-width: 768px) {
   .search-page {
@@ -809,6 +808,23 @@ img {
   font-size: 1.2rem;
   margin-right: 1.4rem;
   color: #c5cdd1; }
+
+.communication-menu__item--active a {
+  opacity: 1;
+  -webkit-animation: pulsate 1.5s ease-out infinite;
+  animation: pulsate 1.5s ease-out infinite; }
+
+@-webkit-keyframes pulsate {
+  70% {
+    opacity: 0.8; }
+  100% {
+    opacity: 1; } }
+
+@keyframes pulsate {
+  70% {
+    opacity: 0.8; }
+  100% {
+    opacity: 1; } }
 
 .contact {
   margin-top: 0;
@@ -966,6 +982,9 @@ img {
       -webkit-justify-content: center;
       -ms-flex-pack: center;
       justify-content: center; } }
+  @media only screen and (max-width: 320px) {
+    .social-menu {
+      padding-bottom: 1rem; } }
 
 .social-menu__item {
   margin-bottom: 2rem; }
@@ -1269,11 +1288,11 @@ input[type="email"]:focus:-ms-input-placeholder {
   position: relative;
   width: 100%; }
   .tab-content > li {
+    display: none;
     width: 100%;
     position: absolute;
     top: 0;
     left: 0;
-    display: none;
     list-style: none; }
     .tab-content > li .content-wrapper {
       text-align: center;
@@ -1300,12 +1319,17 @@ input[type="email"]:focus:-ms-input-placeholder {
   border-bottom: none; }
 
 .tab-content__img-wrap {
-  display: block;
   float: left;
   max-width: 400px;
-  margin-right: 2rem; }
+  margin-right: 2rem;
+  transition: .3s; }
+  .tab-content__img-wrap:hover {
+    -webkit-transform: scale(1.02);
+    -ms-transform: scale(1.02);
+    transform: scale(1.02); }
   @media only screen and (max-width: 768px) {
     .tab-content__img-wrap {
+      display: block;
       float: none;
       margin-left: auto;
       margin-right: auto; } }
@@ -1443,15 +1467,15 @@ input[type="email"]:focus:-ms-input-placeholder {
       box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
       border-bottom: 20px solid rgba(0, 0, 0, 0.15); }
     .colors > li:nth-child(1) {
-      background-color: #2ecc71; }
+      background-color: #cce6be; }
     .colors > li:nth-child(2) {
-      background-color: #D64A4B; }
+      background-color: #e6bebe; }
     .colors > li:nth-child(3) {
-      background-color: #8e44ad; }
+      background-color: #e2e6be; }
     .colors > li:nth-child(4) {
       background-color: #465e78; }
     .colors > li:nth-child(5) {
-      background-color: #bdc3c7; }
+      background-color: #c2bee6; }
 
 .bg-color {
   background-color: #465e78;
@@ -1470,7 +1494,7 @@ input[type="email"]:focus:-ms-input-placeholder {
       .form dd {
         padding-left: 0;
         margin-left: 0; }
-        .form dd input {
+        .form dd input[type="text"], .form dd input[type="email"] {
           width: 100%; } }
 
 .form-about__title, .conclusion-form__title {
@@ -1503,14 +1527,26 @@ input[type="email"]:focus:-ms-input-placeholder {
     .form-about__items input[type="text"]:focus, .conclusion-form__items input[type="text"]:focus {
       background: white; }
 
-.form-about__items--position label {
-  padding-left: 2.2rem;
-  padding-right: .5rem;
-  cursor: pointer; }
-
-.form-about__items--position input {
-  margin-right: .5rem;
-  cursor: pointer; }
+.form-about__items--position {
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center; }
+  .form-about__items--position label {
+    padding-left: 2.2rem;
+    padding-right: .5rem;
+    cursor: pointer; }
+    @media only screen and (max-width: 480px) {
+      .form-about__items--position label {
+        padding-left: 0; } }
+  .form-about__items--position input {
+    margin-right: .5rem;
+    cursor: pointer; }
 
 .more-about__title {
   margin-bottom: 1.5rem; }
@@ -1532,6 +1568,9 @@ input[type="email"]:focus:-ms-input-placeholder {
     background-color: #f5f6f7; }
     .more-about__items input[type="text"]:focus {
       background: white; }
+    @media only screen and (max-width: 480px) {
+      .more-about__items input[type="text"] {
+        margin-bottom: .5rem; } }
 
 .more-about__items--position label {
   margin-right: 2rem;
@@ -1552,6 +1591,9 @@ input[type="email"]:focus:-ms-input-placeholder {
 .usual-things__items {
   margin-bottom: .5rem;
   margin-left: 0; }
+  @media only screen and (max-width: 480px) {
+    .usual-things__items input {
+      width: 1rem; } }
 
 .often-work__title {
   display: block;
@@ -1566,8 +1608,8 @@ input[type="email"]:focus:-ms-input-placeholder {
 
 .often-read__title {
   display: block;
-  font-weight: 400;
-  margin-bottom: 1rem; }
+  margin-bottom: 1rem;
+  font-weight: 400; }
 
 .often-read__items {
   margin-left: 0;
@@ -1588,7 +1630,8 @@ input[type="email"]:focus:-ms-input-placeholder {
   border: 1px solid #b1b3b8;
   border-radius: 2px;
   background-color: #f5f6f7;
-  height: 10rem; }
+  height: 10rem;
+  width: 25rem; }
   .comments__textarea:focus {
     background: white; }
   @media only screen and (max-width: 480px) {
@@ -1661,11 +1704,11 @@ input[type="email"]:focus:-ms-input-placeholder {
       width: 100%; } }
 
 .footer {
-  margin-top: 1rem;
-  padding: 1rem 3rem 0 0;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  margin-top: 1rem;
+  padding: 1rem 3rem 0 0;
   -webkit-justify-content: space-between;
   -ms-flex-pack: justify;
   justify-content: space-between;
