--- a/html/includes/_header.html
+++ b/html/includes/_header.html
@@ -5,7 +5,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Title</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,300i,400,500,700" rel="stylesheet">
-	<link href="css/media.css" rel="stylesheet">
 	<link type="text/css" rel="stylesheet" href="css/icomoon.css" media="all">
 	<link href="css/style.css" rel="stylesheet">
 </head>
@@ -14,7 +13,7 @@
 	<header class="page-header">
 		<h1 class="visually-hidden">Lorem ipsum dolor sit amet, consectetur</h1>
 		<div class="page-header__logo">
-			<a href=""><img src="img/logo.png" alt=""></a>
+			<a href="index.html"><img src="img/logo.png" alt="main_logo"></a>
 		</div>
 		<div class="navigation">
 			<a class="menu-btn">
@@ -39,15 +38,9 @@
 				<input class="search-page__submit" type="submit" name="submit" value=" ">
 			</form>
 			<ul class="social-link-set">
-				<li class="social-link-set__item">
-					<a href=""><i class="icon-facebook"></i></a>
-				</li>
-				<li class="social-link-set__item">
-					<a href=""><i class="icon-twitter"></i></a>
-				</li>
-				<li class="social-link-set__item">
-					<a href=""><i class="icon-google-plus"></i></a>
-				</li>
+				<li class="social-link-set__item"><a href=""><i class="icon-facebook"></i></a></li>
+				<li class="social-link-set__item"><a href=""><i class="icon-twitter"></i></a></li>
+				<li class="social-link-set__item"><a href=""><i class="icon-google-plus"></i></a></li>
 			</ul>
 			<div class="user">
 				<a href=""><i class="icon-user"></i></a>
