--- a/scss/includes/_main.scss
+++ b/scss/includes/_main.scss
@@ -1,4 +1,3 @@
-/////main/////////////////////
 .main-content {
   display: flex;
   justify-content: space-around;
@@ -24,7 +23,6 @@
   width: 100%;
   -webkit-transform: translateY(5px);
   transform: translateY(5px);
-
   > li {
     transition-duration: .25s;
     display: table-cell;
@@ -35,7 +33,6 @@
     overflow: hidden;
     cursor: pointer;
     color: white;
-
     &:before {
       z-index: -1;
       position: absolute;
@@ -48,19 +45,15 @@
       -webkit-transform: translateY(100%);
       transform: translateY(100%);
       transition-duration: .25s;
-
     }
-
     &:hover {
       &:before {
         -webkit-transform: translateY(70%);
         transform: translateY(70%);
       }
     }
-
     &.active {
       color: rgb(80, 85, 90);
-
       &:before {
         transition-duration: .5s;
         background-color: white;
@@ -77,16 +70,13 @@
   background-color: white;
   position: relative;
   width: 100%;
-
   > li {
+    display: none;
     width: 100%;
     position: absolute;
     top: 0;
     left: 0;
-
-    display: none;
     list-style: none;
-
     .content-wrapper {
       text-align: center;
       width: 100%;
@@ -105,7 +95,6 @@
     height: auto;
     border-radius: 5px;
   }
-
 }
 
 .tab-content__item {
@@ -121,11 +110,15 @@
 }
 
 .tab-content__img-wrap {
-  display: block;
   float: left;
   max-width: 400px;
   margin-right: 2rem;
+  transition: .3s;
+  &:hover{
+    transform: scale(1.02);
+  }
   @media only screen and (max-width: 768px) {
+    display: block;
     float: none;
     margin-left: auto;
     margin-right: auto;
@@ -185,13 +178,11 @@
 .mev-company__quote {
   margin-left: 1rem;
   margin-right: 1rem;
-
   font: italic 300 1rem "Roboto";
 }
 
 .mev-company__link {
   font: 100 .8rem "Robot";
-
   a {
     text-align: right;
     font: 100 .8rem "Robot";
@@ -206,7 +197,6 @@
 .mev-info__title {
   font: 300 1.5rem "Roboto";
   text-align: center;
-
 }
 
 .mev-info__quote {
@@ -253,7 +243,6 @@
     color: #676765;
     border-bottom: 1px solid #676765;
   }
-
 }
 
 .combo-box__title {
@@ -265,7 +254,6 @@
   text-align: center;
   margin: 0;
   padding: 1rem 0;
-
   > li {
     list-style: none;
     width: 2rem;
@@ -278,39 +266,32 @@
     cursor: pointer;
     transition-duration: .2s;
     box-shadow: 0 2px 1px rgba(0, 0, 0, .2);
-
     &:hover {
       -webkit-transform: scale(1.2);
       transform: scale(1.2);
       border-bottom: 10px solid rgba(0, 0, 0, .15);
       box-shadow: 0 10px 10px rgba(0, 0, 0, .2);
     }
-
     &.active-color {
       -webkit-transform: scale(1.2) translateY(-10px);
       transform: scale(1.2) translateY(-10px);
       box-shadow: 0 10px 10px rgba(0, 0, 0, .2);
       border-bottom: 20px solid rgba(0, 0, 0, .15);
     }
-
     &:nth-child(1) {
-      background-color: #2ecc71;
+      background-color: #cce6be;
     }
-
     &:nth-child(2) {
-      background-color: #D64A4B;
+      background-color: #e6bebe;
     }
-
     &:nth-child(3) {
-      background-color: #8e44ad;
+      background-color: #e2e6be;
     }
-
     &:nth-child(4) {
       background-color: #465e78;
     }
-
     &:nth-child(5) {
-      background-color: #bdc3c7;
+      background-color: #c2bee6;
     }
   }
 }
