--- a/scss/includes/_navigation_section.scss
+++ b/scss/includes/_navigation_section.scss
@@ -13,7 +13,6 @@
     align-items: center;
     transition: 1s;
   }
-
 }
 
 .communication__navigation {
@@ -63,6 +62,23 @@
   color: #c5cdd1;
 }
 
+.communication-menu__item--active{
+  a{
+   opacity: 1;
+    -webkit-animation: pulsate 1.5s ease-out infinite;
+    animation: pulsate 1.5s ease-out infinite;
+  }
+
+}
+@keyframes pulsate {
+  70% {
+    opacity: 0.8;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .contact {
   margin-top: 0;
   margin-bottom: 0;
@@ -70,7 +86,6 @@
   background: #c5cdd1;
   @media only screen and (max-width: 480px) {
     padding: 1.8rem 0 1.5rem .5rem;
-
   }
 }
 
@@ -106,7 +121,6 @@
       padding-left: 0;
       text-align: center;
     }
-
   }
 }
 
@@ -127,12 +141,10 @@
     i {
       font-size: 2rem;
     }
-
   }
 }
 
 .sub-menu-container {
-
   float: right;
   width: 52%;
   min-height: 695px;
@@ -164,7 +176,6 @@
   }
   @media only screen and (max-width: 480px) {
     padding: 1.8rem 0 1.5rem .5rem;
-
   }
 }
 
@@ -204,7 +215,6 @@
   @media only screen and (max-width: 992px) {
     width: 100%;
   }
-
   @media only screen and (max-width: 768px) {
     flex-direction: column;
     justify-content: center;
@@ -229,6 +239,9 @@
     width: 100%;
     justify-content: center;
   }
+  @media only screen and (max-width: 320px) {
+ padding-bottom: 1rem;
+  }
 }
 
 .social-menu__item {
@@ -243,7 +256,6 @@
       }
       .social-menu__text-title {
         color: #4fc6f8;
-
       }
     }
   }
@@ -308,7 +320,6 @@
   }
   @media only screen and (max-width: 768px) {
     width: 100%;
-
   }
 }
 
@@ -317,7 +328,6 @@
   background: white;
   @media only screen and (max-width: 992px) {
     padding-bottom: 1rem;
-
   }
 }
 
@@ -455,7 +465,6 @@
   }
   @media only screen and (max-width: 480px) {
     width: 100%;
-
   }
 }
 
