--- a/app/css/style.css
+++ b/app/css/style.css
@@ -686,14 +686,16 @@ img {
   @-webkit-keyframes fadeInRight {
     0% {
       opacity: 0;
-      left: 20%; }
+      left: 20%;
+      background: inherit; }
     100% {
       opacity: 1;
       left: 0; } }
   @keyframes fadeInRight {
     0% {
       opacity: 0;
-      left: 20%; }
+      left: 20%;
+      background: inherit; }
     100% {
       opacity: 1;
       left: 0; } } }
