--- a/app/css/style.css
+++ b/app/css/style.css
@@ -840,33 +840,30 @@ img {
 .contact__items:not(:last-child) {
   margin-bottom: 2rem; }
 
-.contact__items p {
-  padding-left: 2rem;
-  font-size: 0.875rem;
+.contact__items {
+  font-size: 0.9rem;
   color: white;
   line-height: 1rem; }
-
-.contact__items address {
-  padding-left: 2rem;
-  font-size: 0.875rem;
-  color: white;
-  line-height: 1.25rem; }
-
-.contact__items a {
-  display: block;
-  margin-bottom: 5px;
-  padding-left: 2rem;
-  color: white; }
-  .contact__items a:hover {
-    opacity: .7; }
-
-@media only screen and (max-width: 480px) {
-  .contact__items p, .contact__items address, .contact__items a {
-    padding-left: 0;
-    text-align: center; } }
+  .contact__items address {
+    padding-left: 2rem;
+    font-size: 0.9rem;
+    color: white;
+    line-height: 1.25rem; }
+  .contact__items a {
+    display: block;
+    margin-bottom: 5px;
+    padding-left: 2rem;
+    color: white; }
+    .contact__items a:hover {
+      opacity: .7; }
+  @media only screen and (max-width: 480px) {
+    .contact__items p, .contact__items address, .contact__items a {
+      padding-left: 0;
+      text-align: center; } }
 
 .contact__icon {
-  float: left; }
+  float: left;
+  padding-right: .7rem; }
   .contact__icon i {
     font-size: 1.2rem;
     color: white; }
@@ -1289,20 +1286,20 @@ input[type="email"]:focus:-ms-input-placeholder {
   background-color: white;
   position: relative;
   width: 100%; }
-  .tab-content > li {
+  .tab-content > div {
     display: none;
     width: 100%;
     position: absolute;
     top: 0;
     left: 0;
     list-style: none; }
-    .tab-content > li .content-wrapper {
+    .tab-content > div .content-wrapper {
       text-align: center;
       width: 100%;
       padding: 3rem 1rem;
       background-color: white; }
       @media only screen and (max-width: 480px) {
-        .tab-content > li .content-wrapper {
+        .tab-content > div .content-wrapper {
           padding: 3rem 0; } }
 
 .content-wrapper img {
@@ -1483,6 +1480,9 @@ input[type="email"]:focus:-ms-input-placeholder {
   background-color: #465e78;
   transition-duration: 1s; }
 
+ul {
+  padding-left: 0; }
+
 .form {
   margin-top: 1rem;
   padding: 1rem;
@@ -1491,13 +1491,46 @@ input[type="email"]:focus:-ms-input-placeholder {
     margin-bottom: 2rem; }
   @media only screen and (max-width: 480px) {
     .form {
-      padding: 0;
-      padding-bottom: 2rem; }
-      .form dd {
+      padding: 1rem .5rem 2rem 0; }
+      .form li {
         padding-left: 0;
         margin-left: 0; }
-        .form dd input[type="text"], .form dd input[type="email"] {
-          width: 100%; } }
+        .form li input[type="text"], .form li input[type="email"], .form li input[type="datetime-local"] {
+          width: 100%;
+          margin-top: .5rem; } }
+
+input[type="number"] {
+  height: 2rem;
+  padding: 5px;
+  box-shadow: 0 1px white, inset 0 2px 2px rgba(0, 0, 0, 0.1);
+  border: 1px solid #b1b3b8;
+  border-radius: 2px;
+  background-color: #f5f6f7;
+  width: 4rem; }
+  input[type="number"]:focus {
+    background: white; }
+
+input[type="date"] {
+  height: 2rem;
+  padding: 5px;
+  box-shadow: 0 1px white, inset 0 2px 2px rgba(0, 0, 0, 0.1);
+  border: 1px solid #b1b3b8;
+  border-radius: 2px;
+  background-color: #f5f6f7;
+  max-width: 11rem; }
+  input[type="date"]:focus {
+    background: white; }
+
+input[type="datetime-local"] {
+  height: 2rem;
+  padding: 5px;
+  box-shadow: 0 1px white, inset 0 2px 2px rgba(0, 0, 0, 0.1);
+  border: 1px solid #b1b3b8;
+  border-radius: 2px;
+  background-color: #f5f6f7;
+  width: 13.4rem; }
+  input[type="datetime-local"]:focus {
+    background: white; }
 
 .form-about__title, .conclusion-form__title {
   margin-bottom: 1.5rem;
@@ -1638,7 +1671,7 @@ input[type="email"]:focus:-ms-input-placeholder {
     background: white; }
   @media only screen and (max-width: 480px) {
     .comments__textarea {
-      min-width: 100%; } }
+      width: 100%; } }
 
 .selection-block__title {
   display: block;
@@ -1662,6 +1695,9 @@ input[type="email"]:focus:-ms-input-placeholder {
   .conclusion-form__items input[type="email"]:focus {
     background: white; }
 
+.estimate input[type="range"] {
+  margin-right: 3rem; }
+
 .spamming__title {
   margin-bottom: .5rem;
   line-height: 1.2rem; }
@@ -1682,12 +1718,12 @@ input[type="email"]:focus:-ms-input-placeholder {
   margin-left: 0; }
 
 .form-btn {
-  width: 6.063rem;
-  height: 2.438rem;
+  width: 6rem;
+  height: 2.4rem;
   background-color: #ea6060;
   border: none;
-  border-radius: 0.188rem 0.25rem 0.25rem 0.188rem;
-  font-size: 0.938rem;
+  border-radius: 0.2rem 0.25rem 0.25rem 0.2rem;
+  font-size: 0.9rem;
   text-transform: uppercase;
   font-weight: 500;
   color: white;
