--- a/scss/includes/_main.scss
+++ b/scss/includes/_main.scss
@@ -70,7 +70,7 @@
   background-color: white;
   position: relative;
   width: 100%;
-  > li {
+  > div {
     display: none;
     width: 100%;
     position: absolute;
