--- a/scss/includes/_form.scss
+++ b/scss/includes/_form.scss
@@ -1,15 +1,7 @@
-@mixin decor-input {
-  height: 2rem;
-  padding: 5px;
-  box-shadow: 0 1px white, inset 0 2px 2px rgba(0, 0, 0, 0.1);
-  border: 1px solid #b1b3b8;
-  border-radius: 2px;
-  background-color: #f5f6f7;
-  &:focus {
-    background: white;
-  }
-}
 
+ul{
+  padding-left: 0;
+}
 .form {
   margin-top: 1rem;
   padding: 1rem;
@@ -18,18 +10,29 @@
     margin-bottom: 2rem;
   }
   @media only screen and (max-width: 480px) {
-    padding: 0;
-    padding-bottom: 2rem;
-    dd {
+    padding: 1rem .5rem 2rem 0;
+    li {
       padding-left: 0;
       margin-left: 0;
-      input[type="text"],input[type="email"] {
+      input[type="text"],input[type="email"],input[type="datetime-local"] {
         width: 100%;
+        margin-top:.5rem;
       }
-    }
+       }
   }
 }
-
+input[type="number"]{
+  @include decor-input;
+  width: 4rem;
+}
+input[type="date"]{
+  @include decor-input;
+  max-width: 11rem;
+}
+input[type="datetime-local"] {
+  @include decor-input;
+  width: 13.4rem;
+}
 .form-about__title {
   margin-bottom: 1.5rem;
   font-weight: 400;
@@ -170,7 +173,7 @@
   height: 10rem;
   width: 25rem;
   @media only screen and (max-width: 480px) {
-    min-width: 100%;
+    width: 100%;
   }
 }
 
@@ -201,7 +204,12 @@
     @include decor-input;
   }
 }
+.estimate{
+  input[type="range"]{
+    margin-right:3rem;
 
+  }
+}
 .spamming__title {
   @extend .usual-things__title;
   margin-bottom: .5rem;
@@ -229,27 +237,5 @@
 }
 
 .form-btn {
-  width: 6.063rem;
-  height: 2.438rem;
-  background-color: #ea6060;
-  border: none;
-  border-radius: 0.188rem 0.25rem 0.25rem 0.188rem;
-  font-size: 0.938rem;
-  text-transform: uppercase;
-  font-weight: 500;
-  color: white;
-  transition: .3s;
-  &:hover {
-    color: #ea6060;
-    background: white;
-    box-shadow: 1px 1px 5px rgba(0, 0, 0, .4);
-  }
-  @media only screen and (max-width: 480px) {
-   margin: 0 auto;
-    text-align: center;
-    width: 100%;
-  }
-  @media only screen and (max-width: 320px) {
-    width: 100%;
-  }
+@include btn;
 }
