--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,6 @@
 
 @import "includes/normalize";
+@import "includes/mixin";
 @import "includes/general_style";
 @import "includes/header";
 @import "includes/navigation_section";
