added test page hotel.html improve code style

--- a/scss/includes/_form.scss
+++ b/scss/includes/_form.scss
@@ -1,14 +1,4 @@
-@mixin decor-input {
-  height: 2rem;
-  padding: 5px;
-  box-shadow: 0 1px white, inset 0 2px 2px rgba(0, 0, 0, 0.1);
-  border: 1px solid #b1b3b8;
-  border-radius: 2px;
-  background-color: #f5f6f7;
-  &:focus {
-    background: white;
-  }
-}
+
 
 .form {
   margin-top: 1rem;
@@ -229,27 +219,5 @@
 }
 
 .form-btn {
-  width: 6.063rem;
-  height: 2.438rem;
-  background-color: #ea6060;
-  border: none;
-  border-radius: 0.188rem 0.25rem 0.25rem 0.188rem;
-  font-size: 0.938rem;
-  text-transform: uppercase;
-  font-weight: 500;
-  color: white;
-  transition: .3s;
-  &:hover {
-    color: #ea6060;
-    background: white;
-    box-shadow: 1px 1px 5px rgba(0, 0, 0, .4);
-  }
-  @media only screen and (max-width: 480px) {
-   margin: 0 auto;
-    text-align: center;
-    width: 100%;
-  }
-  @media only screen and (max-width: 320px) {
-    width: 100%;
-  }
+@include main-btn;
 }
