--- a/app/css/style.css
+++ b/app/css/style.css
@@ -386,18 +386,27 @@ body {
   box-sizing: border-box; }
 
 .main-container {
-  min-width: auto;
   max-width: 1180px;
   padding: 0 10px;
   margin: 0 auto;
+  min-height: 100vh;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
-  min-height: 100vh;
-  overflow: hidden; }
+  height: 100%; }
+
+main, div, section {
+  -webkit-flex: 1 0 auto;
+  -ms-flex: 1 0 auto;
+  flex: 1 0 auto; }
+
+footer {
+  -webkit-flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto; }
 
 @media only screen and (max-width: 480px) {
   .main-container {
@@ -840,30 +849,26 @@ img {
 .contact__items:not(:last-child) {
   margin-bottom: 2rem; }
 
-.contact__items p {
-  padding-left: 2rem;
+.contact__items {
   font-size: 0.875rem;
   color: white;
   line-height: 1rem; }
-
-.contact__items address {
-  padding-left: 2rem;
-  font-size: 0.875rem;
-  color: white;
-  line-height: 1.25rem; }
-
-.contact__items a {
-  display: block;
-  margin-bottom: 5px;
-  padding-left: 2rem;
-  color: white; }
-  .contact__items a:hover {
-    opacity: .7; }
-
-@media only screen and (max-width: 480px) {
-  .contact__items p, .contact__items address, .contact__items a {
-    padding-left: 0;
-    text-align: center; } }
+  .contact__items address {
+    padding-left: 2rem;
+    font-size: 0.875rem;
+    color: white;
+    line-height: 1.25rem; }
+  .contact__items a {
+    display: block;
+    margin-bottom: 5px;
+    padding-left: 2rem;
+    color: white; }
+    .contact__items a:hover {
+      opacity: .7; }
+  @media only screen and (max-width: 480px) {
+    .contact__items p, .contact__items address, .contact__items a {
+      padding-left: 0;
+      text-align: center; } }
 
 .contact__icon {
   float: left; }
@@ -924,7 +929,7 @@ img {
   margin-left: 0;
   line-height: .5; }
   .sub-menu__items a {
-    font-size: 0.938rem;
+    font-size: 0.9rem;
     color: white; }
     .sub-menu__items a:hover {
       color: #56ccc8; }
@@ -1153,8 +1158,8 @@ img {
   margin-right: 1rem;
   padding: 0 5px;
   width: 18rem;
-  height: 2.438rem;
-  border: 0.063rem solid #dde2e4; }
+  height: 2.4rem;
+  border: 1px solid #dde2e4; }
   .subscription-form__email:focus {
     border: none;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4); }
@@ -1164,12 +1169,12 @@ img {
       margin-bottom: .5rem; } }
 
 .subscription-form__submit {
-  width: 6.063rem;
-  height: 2.438rem;
+  width: 6rem;
+  height: 2.4rem;
   background-color: #ea6060;
   border: none;
-  border-radius: 0.188rem 0.25rem 0.25rem 0.188rem;
-  font-size: 0.938rem;
+  border-radius: 0.2rem 0.25rem 0.25rem 0.2rem;
+  font-size: 0.9rem;
   font-weight: 500;
   color: white;
   transition: .3s; }
@@ -1682,12 +1687,12 @@ input[type="email"]:focus:-ms-input-placeholder {
   margin-left: 0; }
 
 .form-btn {
-  width: 6.063rem;
-  height: 2.438rem;
+  width: 6.0rem;
+  height: 2.4rem;
   background-color: #ea6060;
   border: none;
-  border-radius: 0.188rem 0.25rem 0.25rem 0.188rem;
-  font-size: 0.938rem;
+  border-radius: 0.2rem 0.25rem 0.25rem 0.2rem;
+  font-size: 0.9rem;
   text-transform: uppercase;
   font-weight: 500;
   color: white;
@@ -1703,6 +1708,94 @@ input[type="email"]:focus:-ms-input-placeholder {
       width: 100%; } }
   @media only screen and (max-width: 320px) {
     .form-btn {
+      width: 100%; } }
+
+.hotel {
+  margin-top: 1rem;
+  padding-top: 2rem;
+  background: white; }
+
+.hotel__title {
+  font-size: 4rem;
+  text-align: center; }
+
+.hotel__descr {
+  display: block;
+  margin-bottom: 3rem;
+  font-size: 1.2rem;
+  text-align: center; }
+
+.hotel-form {
+  padding: 1rem;
+  width: 85%;
+  margin: 0 auto;
+  background: rgba(70, 94, 120, 0.7);
+  border-radius: 3px; }
+
+.hotel-form__list {
+  padding-left: 0;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
+
+.hotel-form__items {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
+
+.hotel-form--date input {
+  height: 2rem;
+  padding: 5px;
+  box-shadow: 0 1px white, inset 0 2px 2px rgba(0, 0, 0, 0.1);
+  border: 1px solid #b1b3b8;
+  border-radius: 2px;
+  background-color: #f5f6f7;
+  margin-right: .5rem;
+  width: 18rem; }
+  .hotel-form--date input:focus {
+    background: white; }
+
+.hotel-form--number input {
+  height: 2rem;
+  padding: 5px;
+  box-shadow: 0 1px white, inset 0 2px 2px rgba(0, 0, 0, 0.1);
+  border: 1px solid #b1b3b8;
+  border-radius: 2px;
+  background-color: #f5f6f7;
+  margin-right: .5rem;
+  width: 4rem; }
+  .hotel-form--number input:focus {
+    background: white; }
+
+.hotel-form--btn {
+  width: 6.0rem;
+  height: 2.4rem;
+  background-color: #ea6060;
+  border: none;
+  border-radius: 0.2rem 0.25rem 0.25rem 0.2rem;
+  font-size: 0.9rem;
+  text-transform: uppercase;
+  font-weight: 500;
+  color: white;
+  transition: .3s;
+  width: 10rem; }
+  .hotel-form--btn:hover {
+    color: #ea6060;
+    background: white;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4); }
+  @media only screen and (max-width: 480px) {
+    .hotel-form--btn {
+      margin: 0 auto;
+      text-align: center;
+      width: 100%; } }
+  @media only screen and (max-width: 320px) {
+    .hotel-form--btn {
       width: 100%; } }
 
 .footer {
