--- a/scss/includes/_general_style.scss
+++ b/scss/includes/_general_style.scss
@@ -2,14 +2,19 @@ html,body                       { width:100%; height:100%; box-sizing: border-bo
 body                            { padding:0; margin:0; font:16px 'Roboto', sans-serif; background:#465e78; color: #475055; line-height: 1; }
 *, *:before, *:after { box-sizing: border-box; }
 .main-container{
-  min-width: auto;
   max-width: 1180px;
   padding: 0 10px;
   margin: 0 auto;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
-  overflow: hidden;
+  height: 100%;
+}
+main, div, section {
+  flex: 1 0 auto;
+}
+footer {
+  flex: 0 0 auto;
 }
 @media only screen and (max-width: 480px) {
   .main-container{
@@ -38,7 +43,5 @@ img{ max-width: 100%; }
   overflow: hidden;
 }
 
-$main-text-color:#475055;
-$accent: #56ccc8;
 
 
