--- a/scss/includes/_navigation_section.scss
+++ b/scss/includes/_navigation_section.scss
@@ -94,12 +94,12 @@
 }
 
 .contact__items {
-  p {
-    padding-left: 2rem;
+
+
     font-size: 0.875rem;
     color: white;
     line-height: 1rem;
-  }
+
   address {
     padding-left: 2rem;
     font-size: 0.875rem;
@@ -194,7 +194,7 @@
   margin-left: 0;
   line-height: .5;
   a {
-    font-size: 0.938rem;
+    font-size: 0.9rem;
     color: white;
     &:hover {
       color: #56ccc8;
@@ -435,8 +435,8 @@
   margin-right: 1rem;
   padding: 0 5px;
   width: 18rem;
-  height: 2.438rem;
-  border: 0.063rem solid #dde2e4;
+  height: 2.4rem;
+  border: 1px solid #dde2e4;
   &:focus {
     border: none;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, .4);
@@ -449,12 +449,12 @@
 }
 
 .subscription-form__submit {
-  width: 6.063rem;
-  height: 2.438rem;
+  width: 6rem;
+  height: 2.4rem;
   background-color: #ea6060;
   border: none;
-  border-radius: 0.188rem 0.25rem 0.25rem 0.188rem;
-  font-size: 0.938rem;
+  border-radius: 0.2rem 0.25rem 0.25rem 0.2rem;
+  font-size: 0.9rem;
   font-weight: 500;
   color: white;
   transition: .3s;
