--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,10 +1,12 @@
 
 @import "includes/normalize";
 @import "includes/general_style";
+@import "includes/mixin";
 @import "includes/header";
 @import "includes/navigation_section";
 @import "includes/main";
 @import "includes/form";
+@import "includes/hotel";
 @import "includes/footer";
 
 
